# Google-Drive-Takeout-Restructuring

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  FINDER_CRASH_FIXES.md  PATH_DETECTION_IMPROVEMENTS.md  README.md  environment.yml  gui_server.py  gui_server_backup.py  gui_state.pkl  main.py  main_enhanced.py  main_enhanced_v2.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  rollback.py  run_tests.sh  start_gui.py  test_cli.py  test_consolidator.py  test_external_paths.py  test_rebuilder_v2.py  test_run.py  verify_reconstruction.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
app/: cli.py  config.py
app/core/: cli_executor.py  duplicate_checker.py  extractor.py  file_scanner.py  logger.py  path_normalizer.py  rebuilder.py  rebuilder_v2.py  verifier.py
app/gui/: gui_server.py
app/gui/routers/: __init__.py  logs.py  paths.py  processing.py  progress.py  system.py
app/gui/static/: style.css
app/gui/templates/: index.html  layout.html
app/gui/templates/partials/: complete.html  errors.html  logs.html  progress.html
docs/: PROJECT_REFACTOR_PLAN.md  README_GUI.md  REFACTOR_SUMMARY.md  SOFTARE_RESTRUCTURE_CREATE_PROJECT.md
gdrive_env/: pyvenv.cfg
scripts/: rollback.py  setup_environment.sh  verify_reconstruction.py
static/: style.css
templates/: index.html  index_backup_before_redesign.html  index_upload_backup.html
tests/: conftest.py  utils.py
tests/integration/: test_cli_workflow.py  test_end_to_end.py  test_real_processing.py
tests/unit/: test_config.py  test_extractor.py  test_logger.py  test_rebuilder.py  test_rebuilder_v2.py  test_verifier.py
utils/: fs_utils.py
